--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datahunter",
+  "name": "apidhcs-sdk",
   "version": "1.0.1",
   "description": "a secure typescript client for interacting with the datahunter api, featuring end-to-end encryption using elliptic curve cryptography (ecc).",
   "license": "ISC",
@@ -22,6 +22,8 @@
     "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "copyfiles": "^2.4.1",
     "eslint": "^8.49.0",
@@ -29,8 +31,6 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tscpaths": "^0.0.9",
