--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "tscpaths": "^0.0.9",
+    "typescript": "^5.4.5",
+    "copyfiles": "^2.4.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "copyfiles": "^2.4.1",
     "eslint": "^8.49.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "tscpaths": "^0.0.9",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2"
   }
 }
